// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Result /> renders conventionnal indemnite with warning toast 1`] = `
.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c18 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  width: calc(50% * 0.9100320789890648);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c15 {
  width: calc(50% * 1);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c6 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c13 {
  margin: 1.6rem 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  display: block;
  margin-bottom: 1.6rem;
}

.c7 {
  margin-top: 2rem;
}

.c9 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c10 {
  list-style-type: disc;
}

.c11 {
  font-size: 1.4rem;
}

.c12 {
  margin: 1.6rem 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

.c17 {
  margin: 2rem 0;
}

@media print {
  .c16 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c4 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c5 {
    width: calc(100% * 0.9100320789890648);
  }
}

@media (max-width:980px) {
  .c15 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à 
    <strong
      class="c1"
    >
      17,444.44
       € brut
    </strong>
    .
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <div>
      <div
        class="c3"
      >
        Votre indemnite légale
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <span
          class="c6"
        >
          15,875.00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            Salaire de réference (Sref)
             : 
            4500
          </li>
          <li
            class="c11"
          >
            Licenciement pour inaptitude
             : 
            non
          </li>
          <li
            class="c11"
          >
            Ancienneté totale (A)
             : 
            13.08
          </li>
          <li
            class="c11"
          >
            Ancienneté au delà de 10ans (A2)
             : 
            3.08
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule :
        </strong>
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div>
                <span
                  class="katex-display"
                >
                  <span
                    class="katex"
                  >
                    <span
                      class="katex-mathml"
                    >
                      <math>
                        <semantics>
                          <mrow>
                            <mo>
                              (
                            </mo>
                            <mfrac>
                              <mrow>
                                <mn>
                                  1
                                </mn>
                              </mrow>
                              <mrow>
                                <mn>
                                  4
                                </mn>
                              </mrow>
                            </mfrac>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mn>
                              1
                            </mn>
                            <mn>
                              0
                            </mn>
                            <mo>
                              )
                            </mo>
                            <mo>
                              +
                            </mo>
                            <mo>
                              (
                            </mo>
                            <mfrac>
                              <mrow>
                                <mn>
                                  1
                                </mn>
                              </mrow>
                              <mrow>
                                <mn>
                                  3
                                </mn>
                              </mrow>
                            </mfrac>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi
                              mathvariant="normal"
                            >
                              "
                            </mi>
                            <mi>
                              A
                            </mi>
                            <mn>
                              2
                            </mn>
                            <mi
                              mathvariant="normal"
                            >
                              "
                            </mi>
                            <mo>
                              )
                            </mo>
                          </mrow>
                          <annotation
                            encoding="application/x-tex"
                          >
                            (\\frac{1}{4} \\times Sref \\times 10) + (\\frac{1}{3} \\times Sref \\times "A2")
                          </annotation>
                        </semantics>
                      </math>
                    </span>
                    <span
                      aria-hidden="true"
                      class="katex-html"
                    >
                      <span
                        class="strut"
                        style="height:1.32144em;"
                      />
                      <span
                        class="strut bottom"
                        style="height:2.00744em;vertical-align:-0.686em;"
                      />
                      <span
                        class="base"
                      >
                        <span
                          class="mopen"
                        >
                          (
                        </span>
                        <span
                          class="mord"
                        >
                          <span
                            class="mopen nulldelimiter"
                          />
                          <span
                            class="mfrac"
                          >
                            <span
                              class="vlist-t vlist-t2"
                            >
                              <span
                                class="vlist-r"
                              >
                                <span
                                  class="vlist"
                                  style="height:1.32144em;"
                                >
                                  <span
                                    style="top:-2.314em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="mord"
                                    >
                                      <span
                                        class="mord"
                                      >
                                        4
                                      </span>
                                    </span>
                                  </span>
                                  <span
                                    style="top:-3.15em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="stretchy"
                                      style="height:0.2em;"
                                    >
                                      <svg
                                        height="0.2em"
                                        preserveAspectRatio="xMinYMin slice"
                                        viewBox="0 0 400000 200"
                                        width="400em"
                                      >
                                        <path
                                          d="M0 80H400000 v40H0z M0 80H400000 v40H0z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                  <span
                                    style="top:-3.677em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="mord"
                                    >
                                      <span
                                        class="mord"
                                      >
                                        1
                                      </span>
                                    </span>
                                  </span>
                                </span>
                                <span
                                  class="vlist-s"
                                >
                                  ​
                                </span>
                              </span>
                              <span
                                class="vlist-r"
                              >
                                <span
                                  class="vlist"
                                  style="height:0.686em;"
                                />
                              </span>
                            </span>
                          </span>
                          <span
                            class="mclose nulldelimiter"
                          />
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord mathit"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.02778em;"
                        >
                          r
                        </span>
                        <span
                          class="mord mathit"
                        >
                          e
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord"
                        >
                          1
                        </span>
                        <span
                          class="mord"
                        >
                          0
                        </span>
                        <span
                          class="mclose"
                        >
                          )
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          +
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mopen"
                        >
                          (
                        </span>
                        <span
                          class="mord"
                        >
                          <span
                            class="mopen nulldelimiter"
                          />
                          <span
                            class="mfrac"
                          >
                            <span
                              class="vlist-t vlist-t2"
                            >
                              <span
                                class="vlist-r"
                              >
                                <span
                                  class="vlist"
                                  style="height:1.32144em;"
                                >
                                  <span
                                    style="top:-2.314em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="mord"
                                    >
                                      <span
                                        class="mord"
                                      >
                                        3
                                      </span>
                                    </span>
                                  </span>
                                  <span
                                    style="top:-3.15em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="stretchy"
                                      style="height:0.2em;"
                                    >
                                      <svg
                                        height="0.2em"
                                        preserveAspectRatio="xMinYMin slice"
                                        viewBox="0 0 400000 200"
                                        width="400em"
                                      >
                                        <path
                                          d="M0 80H400000 v40H0z M0 80H400000 v40H0z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                  <span
                                    style="top:-3.677em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="mord"
                                    >
                                      <span
                                        class="mord"
                                      >
                                        1
                                      </span>
                                    </span>
                                  </span>
                                </span>
                                <span
                                  class="vlist-s"
                                >
                                  ​
                                </span>
                              </span>
                              <span
                                class="vlist-r"
                              >
                                <span
                                  class="vlist"
                                  style="height:0.686em;"
                                />
                              </span>
                            </span>
                          </span>
                          <span
                            class="mclose nulldelimiter"
                          />
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord mathit"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.02778em;"
                        >
                          r
                        </span>
                        <span
                          class="mord mathit"
                        >
                          e
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord"
                        >
                          "
                        </span>
                        <span
                          class="mord mathit"
                        >
                          A
                        </span>
                        <span
                          class="mord"
                        >
                          2
                        </span>
                        <span
                          class="mord"
                        >
                          "
                        </span>
                        <span
                          class="mclose"
                        >
                          )
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </details>
      <p>
        Source :
         
        <a
          href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000035644154&cidTexte=LEGITEXT000006072050&dateTexte=20170924"
          rel="nofollow noopener"
          title="voir l'article L.1234-9 du code du travail sur légifrance"
        >
          Article L.1234-9 du code du travail
        </a>
        ,
        <a
          href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000018537572&cidTexte=LEGITEXT000006072050&dateTexte=20170927"
          rel="nofollow noopener"
          title="voir les articles R1234-1 à R1234-4 du code du travail sur légifrance"
        >
          Article R1234-1 à R1234-4 du code du travail
        </a>
      </p>
    </div>
    <div>
      <div
        class="c3"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c4"
      >
        <div
          class="c15"
        />
        <span
          class="c6"
        >
          17,444.44
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            Salaire de référence (Sref)
             : 
            4000
          </li>
          <li
            class="c11"
          >
            Coefficient d'indemnité conventionnel (C)
             : 
            0.33
          </li>
          <li
            class="c11"
          >
            Ancienneté conventionnelle (A)
             : 
            13.08
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule :
        </strong>
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div>
                <span
                  class="katex-display"
                >
                  <span
                    class="katex"
                  >
                    <span
                      class="katex-mathml"
                    >
                      <math>
                        <semantics>
                          <mrow>
                            <mo>
                              (
                            </mo>
                            <mi>
                              C
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              A
                            </mi>
                            <mo>
                              )
                            </mo>
                          </mrow>
                          <annotation
                            encoding="application/x-tex"
                          >
                            (C \\times Sref \\times A)
                          </annotation>
                        </semantics>
                      </math>
                    </span>
                    <span
                      aria-hidden="true"
                      class="katex-html"
                    >
                      <span
                        class="strut"
                        style="height:0.75em;"
                      />
                      <span
                        class="strut bottom"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="base"
                      >
                        <span
                          class="mopen"
                        >
                          (
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.07153em;"
                        >
                          C
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord mathit"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.02778em;"
                        >
                          r
                        </span>
                        <span
                          class="mord mathit"
                        >
                          e
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord mathit"
                        >
                          A
                        </span>
                        <span
                          class="mclose"
                        >
                          )
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <div
    class="c16 c17"
  >
    <div
      class="c18"
      role="alert"
    >
      Si un emploi équivalent a été trouvé
      <ul>
        <li>
          par l’employeur
        </li>
        <li>
          dans une autre entreprise
        </li>
        <li>
          avant la fin du préavis
        </li>
        <li>
          et que le salarié l’accepte
        </li>
      </ul>
      Alors l’indemnité de licenciement conventionnelle est réduite d’un tiers et passe donc à
       
      <strong
        class="c1"
      >
        11629.62
         €
      </strong>
      <br />
      Attention, ce tiers (
      5814.81
       €) est dû si la période d’essai dans ce nouvel emploi reste sans suite.
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;

exports[`<Result /> renders legal indemnite 1`] = `
.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  width: calc(50% * 1);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c15 {
  width: calc(50% * 0.5494311811023621);
  background-color: #7994d4;
  border-radius: 0.6rem;
}

.c6 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c13 {
  margin: 1.6rem 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  display: block;
  margin-bottom: 1.6rem;
}

.c7 {
  margin-top: 2rem;
}

.c9 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c10 {
  list-style-type: disc;
}

.c11 {
  font-size: 1.4rem;
}

.c12 {
  margin: 1.6rem 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:980px) {
  .c4 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c5 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c15 {
    width: calc(100% * 0.5494311811023621);
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à 
    <strong
      class="c1"
    >
      15,875.00
       € brut
    </strong>
    .
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <div>
      <div
        class="c3"
      >
        Votre indemnite légale
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <span
          class="c6"
        >
          15,875.00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            Salaire de réference (Sref)
             : 
            4500
          </li>
          <li
            class="c11"
          >
            Licenciement pour inaptitude
             : 
            non
          </li>
          <li
            class="c11"
          >
            Ancienneté totale (A)
             : 
            13.08
          </li>
          <li
            class="c11"
          >
            Ancienneté au delà de 10ans (A2)
             : 
            3.08
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule :
        </strong>
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div>
                <span
                  class="katex-display"
                >
                  <span
                    class="katex"
                  >
                    <span
                      class="katex-mathml"
                    >
                      <math>
                        <semantics>
                          <mrow>
                            <mo>
                              (
                            </mo>
                            <mfrac>
                              <mrow>
                                <mn>
                                  1
                                </mn>
                              </mrow>
                              <mrow>
                                <mn>
                                  4
                                </mn>
                              </mrow>
                            </mfrac>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mn>
                              1
                            </mn>
                            <mn>
                              0
                            </mn>
                            <mo>
                              )
                            </mo>
                            <mo>
                              +
                            </mo>
                            <mo>
                              (
                            </mo>
                            <mfrac>
                              <mrow>
                                <mn>
                                  1
                                </mn>
                              </mrow>
                              <mrow>
                                <mn>
                                  3
                                </mn>
                              </mrow>
                            </mfrac>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi
                              mathvariant="normal"
                            >
                              "
                            </mi>
                            <mi>
                              A
                            </mi>
                            <mn>
                              2
                            </mn>
                            <mi
                              mathvariant="normal"
                            >
                              "
                            </mi>
                            <mo>
                              )
                            </mo>
                          </mrow>
                          <annotation
                            encoding="application/x-tex"
                          >
                            (\\frac{1}{4} \\times Sref \\times 10) + (\\frac{1}{3} \\times Sref \\times "A2")
                          </annotation>
                        </semantics>
                      </math>
                    </span>
                    <span
                      aria-hidden="true"
                      class="katex-html"
                    >
                      <span
                        class="strut"
                        style="height:1.32144em;"
                      />
                      <span
                        class="strut bottom"
                        style="height:2.00744em;vertical-align:-0.686em;"
                      />
                      <span
                        class="base"
                      >
                        <span
                          class="mopen"
                        >
                          (
                        </span>
                        <span
                          class="mord"
                        >
                          <span
                            class="mopen nulldelimiter"
                          />
                          <span
                            class="mfrac"
                          >
                            <span
                              class="vlist-t vlist-t2"
                            >
                              <span
                                class="vlist-r"
                              >
                                <span
                                  class="vlist"
                                  style="height:1.32144em;"
                                >
                                  <span
                                    style="top:-2.314em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="mord"
                                    >
                                      <span
                                        class="mord"
                                      >
                                        4
                                      </span>
                                    </span>
                                  </span>
                                  <span
                                    style="top:-3.15em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="stretchy"
                                      style="height:0.2em;"
                                    >
                                      <svg
                                        height="0.2em"
                                        preserveAspectRatio="xMinYMin slice"
                                        viewBox="0 0 400000 200"
                                        width="400em"
                                      >
                                        <path
                                          d="M0 80H400000 v40H0z M0 80H400000 v40H0z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                  <span
                                    style="top:-3.677em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="mord"
                                    >
                                      <span
                                        class="mord"
                                      >
                                        1
                                      </span>
                                    </span>
                                  </span>
                                </span>
                                <span
                                  class="vlist-s"
                                >
                                  ​
                                </span>
                              </span>
                              <span
                                class="vlist-r"
                              >
                                <span
                                  class="vlist"
                                  style="height:0.686em;"
                                />
                              </span>
                            </span>
                          </span>
                          <span
                            class="mclose nulldelimiter"
                          />
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord mathit"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.02778em;"
                        >
                          r
                        </span>
                        <span
                          class="mord mathit"
                        >
                          e
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord"
                        >
                          1
                        </span>
                        <span
                          class="mord"
                        >
                          0
                        </span>
                        <span
                          class="mclose"
                        >
                          )
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          +
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mopen"
                        >
                          (
                        </span>
                        <span
                          class="mord"
                        >
                          <span
                            class="mopen nulldelimiter"
                          />
                          <span
                            class="mfrac"
                          >
                            <span
                              class="vlist-t vlist-t2"
                            >
                              <span
                                class="vlist-r"
                              >
                                <span
                                  class="vlist"
                                  style="height:1.32144em;"
                                >
                                  <span
                                    style="top:-2.314em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="mord"
                                    >
                                      <span
                                        class="mord"
                                      >
                                        3
                                      </span>
                                    </span>
                                  </span>
                                  <span
                                    style="top:-3.15em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="stretchy"
                                      style="height:0.2em;"
                                    >
                                      <svg
                                        height="0.2em"
                                        preserveAspectRatio="xMinYMin slice"
                                        viewBox="0 0 400000 200"
                                        width="400em"
                                      >
                                        <path
                                          d="M0 80H400000 v40H0z M0 80H400000 v40H0z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                  <span
                                    style="top:-3.677em;"
                                  >
                                    <span
                                      class="pstrut"
                                      style="height:3em;"
                                    />
                                    <span
                                      class="mord"
                                    >
                                      <span
                                        class="mord"
                                      >
                                        1
                                      </span>
                                    </span>
                                  </span>
                                </span>
                                <span
                                  class="vlist-s"
                                >
                                  ​
                                </span>
                              </span>
                              <span
                                class="vlist-r"
                              >
                                <span
                                  class="vlist"
                                  style="height:0.686em;"
                                />
                              </span>
                            </span>
                          </span>
                          <span
                            class="mclose nulldelimiter"
                          />
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord mathit"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.02778em;"
                        >
                          r
                        </span>
                        <span
                          class="mord mathit"
                        >
                          e
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord"
                        >
                          "
                        </span>
                        <span
                          class="mord mathit"
                        >
                          A
                        </span>
                        <span
                          class="mord"
                        >
                          2
                        </span>
                        <span
                          class="mord"
                        >
                          "
                        </span>
                        <span
                          class="mclose"
                        >
                          )
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </details>
      <p>
        Source :
         
        <a
          href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000035644154&cidTexte=LEGITEXT000006072050&dateTexte=20170924"
          rel="nofollow noopener"
          title="voir l'article L.1234-9 du code du travail sur légifrance"
        >
          Article L.1234-9 du code du travail
        </a>
        ,
        <a
          href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000018537572&cidTexte=LEGITEXT000006072050&dateTexte=20170927"
          rel="nofollow noopener"
          title="voir les articles R1234-1 à R1234-4 du code du travail sur légifrance"
        >
          Article R1234-1 à R1234-4 du code du travail
        </a>
      </p>
    </div>
    <div>
      <div
        class="c3"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c4"
      >
        <div
          class="c15"
        />
        <span
          class="c6"
        >
          8,722.22
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Éléments saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            Salaire de référence (Sref)
             : 
            2000
          </li>
          <li
            class="c11"
          >
            Coefficient d'indemnité conventionnel (C)
             : 
            0.33
          </li>
          <li
            class="c11"
          >
            Ancienneté conventionnelle (A)
             : 
            13.08
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule :
        </strong>
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div>
                <span
                  class="katex-display"
                >
                  <span
                    class="katex"
                  >
                    <span
                      class="katex-mathml"
                    >
                      <math>
                        <semantics>
                          <mrow>
                            <mo>
                              (
                            </mo>
                            <mi>
                              C
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              S
                            </mi>
                            <mi>
                              r
                            </mi>
                            <mi>
                              e
                            </mi>
                            <mi>
                              f
                            </mi>
                            <mo>
                              ×
                            </mo>
                            <mi>
                              A
                            </mi>
                            <mo>
                              )
                            </mo>
                          </mrow>
                          <annotation
                            encoding="application/x-tex"
                          >
                            (C \\times Sref \\times A)
                          </annotation>
                        </semantics>
                      </math>
                    </span>
                    <span
                      aria-hidden="true"
                      class="katex-html"
                    >
                      <span
                        class="strut"
                        style="height:0.75em;"
                      />
                      <span
                        class="strut bottom"
                        style="height:1em;vertical-align:-0.25em;"
                      />
                      <span
                        class="base"
                      >
                        <span
                          class="mopen"
                        >
                          (
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.07153em;"
                        >
                          C
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord mathit"
                          style="margin-right:0.05764em;"
                        >
                          S
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.02778em;"
                        >
                          r
                        </span>
                        <span
                          class="mord mathit"
                        >
                          e
                        </span>
                        <span
                          class="mord mathit"
                          style="margin-right:0.10764em;"
                        >
                          f
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mbin"
                        >
                          ×
                        </span>
                        <span
                          class="mord rule"
                          style="margin-right:0.2222222222222222em;"
                        />
                        <span
                          class="mord mathit"
                        >
                          A
                        </span>
                        <span
                          class="mclose"
                        >
                          )
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;
